修改域名，完善配置

--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -131,7 +131,7 @@ social:
   GitHub: https://github.com/linjiesen || github
   E-Mail: mailto:sjpgmoe@gmail.com || envelope
   #Google: https://plus.google.com/yourname || google
-  Twitter: https://twitter.com/ligenlinus  || twitter
+  #Twitter: https://twitter.com/ligenlinus  || twitter
   #FB Page: https://www.facebook.com/yourname || facebook
   #VK Group: https://vk.com/yourname || vk
   #StackOverflow: https://stackoverflow.com/yourname || stack-overflow
